WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132026
DumpRenderTree generates white snapshots on some platforms
https://bugs.webkit.org/show_bug.cgi?id=132026
Summary
DumpRenderTree generates white snapshots on some platforms
Tim Horton
Reported
2014-04-22 15:31:48 PDT
<
rdar://problem/16679363
>
Attachments
patch
(4.44 KB, patch)
2014-04-22 15:39 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-04-22 15:39:31 PDT
Created
attachment 229915
[details]
patch
WebKit Commit Bot
Comment 2
2014-04-22 15:42:16 PDT
Attachment 229915
[details]
did not pass style-queue: ERROR: Tools/DumpRenderTree/mac/PixelDumpSupportMac.mm:137: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2014-04-22 15:45:49 PDT
http://trac.webkit.org/changeset/167687
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug