DumpRenderTree generates white snapshots on some platforms https://bugs.webkit.org/show_bug.cgi?id=132026 <rdar://problem/16679363>

Reviewed by Simon Fraser.

* DumpRenderTree/mac/Configurations/DumpRenderTree.xcconfig:
Link DRT against QuartzCore.

* DumpRenderTree/mac/PixelDumpSupportMac.mm:
(createBitmapContextFromWebView):
Force CoreAnimation to synchronously update layers in a more explicit
way that doesn't depend on AppKit behavior. This is very similar to what
WebKitTestRunner does (indirectly) during its force repaint.


Canonical link: https://commits.webkit.org/150104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167687 268f45cc-cd09-0410-ab3c-d52691b4dbfc